@@ -15,18 +15,21 @@ libpaths=lib
 
 {unix}ldflags+="`pkg-config --libs gtk+-2.0`"
 
-# Uncomment these two lines to build HwGUI in Unicode mode
+# Change 3 lines to build HwGUI in Unicode mode
 
-#PRGFLAGS=-DUNICODE -q -m -n
-#CFLAGS=-DUNICODE -DHWG_USE_POINTER_ITEM
+#PRGFLAGS=-DUNICODE -q -m -n -es2
+#{win}CFLAGS=-DUNICODE -DHWG_USE_POINTER_ITEM
+#{unix}CFLAGS=-DUNICODE -DHWG_USE_POINTER_ITEM "`pkg-config --cflags gtk+-2.0`"
 
 PRGFLAGS=-q -m -n -es2
-CFLAGS=-DHWG_USE_POINTER_ITEM
+{win}CFLAGS=-DHWG_USE_POINTER_ITEM
+{unix}CFLAGS=-DHWG_USE_POINTER_ITEM "`pkg-config --cflags gtk+-2.0`"
 
 # Activate for GCC > V8
 #-Wold-style-cast
+# Always done in "warnings.h" as PRAGMA declaration
 
-#"{unix}-cflag=`pkg-config --cflags gtk+-2.0`"
+# "{unix}-cflag=`pkg-config --cflags gtk+-2.0`"
 
 # =============================== EOF of hwgui.hbc ====================================
 
