@@ -8,6 +8,16 @@
    2002-12-01 15:50 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
 
+2021-02-23 09:30 UTC+0100 Wilfried Brunken DF7BE
+  * hwgui.hbc
+  * include/warnings.h
+  * source/common/editor/hcedit_l.c
+  * source/gtk/window.c
+  * source/winapi/window.c
+ ! Ticket #77:
+ ! Corrected files for compiling with hbmk2 on LINUX.
+ ! Added PRAGMA for: -Wold-style-cast in warnings.h.
+
 2021-02-22 23:40 UTC+0100 Wilfried Brunken DF7BE
   * include/warnings.h
   * source/common/procmisc/procscri.prg
